--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1114,4 +1114,5 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <string name="go_to_settings">Go to settings</string>
     <!-- endregion -->
 
+    <string name="invalid_firebase_api_key_message">Invalid Firebase API key. Push notifications will not work.</string>
 </resources>
