--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -46,7 +46,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <string name="login_failure">Error al iniciar sesión</string>
     <string name="invalid_server_proof">Prueba de servidor inválida</string>
     <string name="invalid_credentials">Credenciales inválidas</string>
-    <string name="incorrect_key_parameters">Incorrect key parameters</string>
+    <string name="incorrect_key_parameters">Parámetros clave incorrectos</string>
     <string name="invalid_mailbox_password">Contraseña del buzón inválida</string>
     <string name="not_signed_up">No está registrado en la Beta de ProtonMail para Android</string>
     <string name="no_network">Sin conexión</string>
