--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1104,6 +1104,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <!-- region errors -->
     <string name="error_image_not_found">Image not found</string>
     <string name="error_image_bad_url">Malformed image url</string>
+    <string name="error_saving_try_again">Error while saving message. Try again.</string>
     <!-- endregion -->
 
     <string name="allowed">Allowed</string>
@@ -1116,4 +1117,6 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <!-- endregion -->
 
     <string name="invalid_firebase_api_key_message">Invalid Firebase API key. Push notifications will not work.</string>
+
+
 </resources>
