Show error notification when uploading drafts attachments fails
- using a notification as a way to ensure errors are shown independently
  on the app's state (background...)
- ComposeMessageViewModel just collects saveDraft request with caring of
  emitted items as it will be destryed right after invoking the
  `saveDraft` use case when updting a draft, so result doesn't get here
- Introduce ErrorNotifier to grant more flexibility and avoid further
  dependencies on NotificationServer

  MAILAND-1281

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1117,6 +1117,6 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <!-- endregion -->
 
     <string name="invalid_firebase_api_key_message">Invalid Firebase API key. Push notifications will not work.</string>
-    <string name="failed_saving_draft_online">Failed saving online draft for message %s</string>
+    <string name="failed_saving_draft_online">Failed saving online draft for message: "%s"</string>
     <string name="cannot_open_message_while_being_sent">Can\'t open this message while it\'s being sent</string>
 </resources>
