Add a foreground service to ProcessPushNotificationDataWorker
We do this because this worker runs a long-running operation and it's important that its execution happens as soon as possible with no interruptions. A low priority notification will be shown while this worker is doing its work.

MAILAND-1417

Affected: Push notifications

Fix test

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -803,7 +803,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <string name="channel_description_ongoing_operations">Shows all ongoing operations like new
 		message download on background
 	</string>
-    <string name="checking_mailbox">Checking mailbox</string>
+    <string name="retrieving_notifications">Retrieving notifications</string>
     <string name="report_phishing">Report phishing</string>
     <string name="print">Print</string>
     <string name="phishing_dialog_title">Confirm phishing report</string>
