--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <string name="no_network_queued">No network, message queued</string>
     <string name="update_app_title">Update required</string>
     <string name="update_app">Your ProtonMail app cannot be used until it is updated</string>
+    <string name="you_are_offline">You are offline</string>
     <string name="api_offline_title">ProtonMail API offline</string>
     <string name="api_offline">ProtonMail is currently offline, check our twitter for the current status: https://twitter.com/protonmail</string>
     <string name="contact_saved">Contact saved</string>
@@ -301,7 +302,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <string name="message_deleted_error">Error while deleting some messages. Some of the selected messages are in sending process?!</string>
     <string name="respond_inline">Respond in-line</string>
     <string name="no_connectivity_detected">No connectivity detected...</string>
-    <string name="no_connectivity_detected_troubleshoot">No connectivity detected&#8230; (<u>Troubleshoot</u>)</string>
+    <string name="server_not_reachable_troubleshoot">Server not reachable&#8230; (<u>Troubleshoot</u>)</string>
     <string name="connectivity_checking">Checking for connection...</string>
     <string name="sync_short">sync</string>
     <string name="draft_attachments_uploading">Draft is still uploading...</string>
