Remove v4 flavor and move mailbox view v4 UI to main
We will not use the v4 flavor and instead we will work on v4 on a separate branch.

MAILAND-1495

#comment Affected: Mailbox view UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,13 +65,14 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <string name="message_drafted">Message sending failed. Your messages are saved in drafts folder</string>
     <string name="open_drawer">Open</string>
     <string name="close_drawer">Close</string>
-    <string name="inbox_option">INBOX</string>
-    <string name="starred_option">STARRED</string>
-    <string name="drafts_option">DRAFTS</string>
-    <string name="sent_option">SENT</string>
-    <string name="archive_option">ARCHIVE</string>
-    <string name="trash_option">TRASH</string>
-    <string name="spam_option">SPAM</string>
+    <string name="inbox_option">Inbox</string>
+    <string name="starred_option">Starred</string>
+    <string name="drafts_option">Drafts</string>
+    <string name="sent_option">Sent</string>
+    <string name="archive_option">Archive</string>
+    <string name="trash_option">Trash</string>
+    <string name="spam_option">Spam</string>
+    <string name="allmail_option">All Mail</string>
     <string name="inbox">Inbox</string>
     <string name="starred">Starred</string>
     <string name="drafts">Drafts</string>
@@ -79,6 +80,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <string name="archive">Archive</string>
     <string name="trash">Trash</string>
     <string name="spam">Spam</string>
+    <string name="all_mail">All Mail</string>
     <string name="contacts">Contacts</string>
     <string name="search_contacts">Search contacts</string>
     <string name="fetching_contacts">Fetching ProtonMail contacts...</string>
@@ -685,8 +687,6 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <string name="folder_deleted_error">Error while deleting folder</string>
     <string name="save_new_folder">Save New Folder</string>
     <string name="create_new_folder">Create Folder</string>
-    <string name="all_mail">All Mail</string>
-    <string name="allmail_option">ALL MAIL</string>
     <string name="empty_emails">No emails</string>
     <string name="empty_email_list">No email address</string>
     <string name="no_contacts">No Contacts</string>
