--- a/app/src/main/res/values-ca-rES/strings.xml
+++ b/app/src/main/res/values-ca-rES/strings.xml
@@ -620,7 +620,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <string name="print_error">Error d\'impressió</string>
     <string name="download_complete">Descàrrega completa</string>
     <string name="download_in_progress">Descàrrega en curs</string>
-    <string name="expires_in">\tCaduca a %s</string>
+    <string name="message_expires_in">\tCaduca a %s</string>
     <string name="unsaved_changes_title">Canvis no desats</string>
     <string name="unsaved_changes_subtitle">Hi ha entrades sense desar al formulari. Esteu segur que voleu descartar-los?</string>
     <string name="request_timeout">El temps de la petició s\'ha esgotat, si us plau intenteu-ho de nou</string>
