--- a/app/src/main/res/values-is-rIS/strings.xml
+++ b/app/src/main/res/values-is-rIS/strings.xml
@@ -622,7 +622,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <string name="print_error">Villa við prentun</string>
     <string name="download_complete">Niðurhali lokið</string>
     <string name="download_in_progress">Niðurhal í gangi.</string>
-    <string name="expires_in">\tRennur út eftir %s</string>
+    <string name="message_expires_in">\tRennur út eftir %s</string>
     <string name="unsaved_changes_title">Óvistaðar breytingar</string>
     <string name="unsaved_changes_subtitle">Það eru óvistaðar færslur á síðunni. Ertu viss um að þú viljir henda þeim?</string>
     <string name="request_timeout">Beiðni féll á tíma, reyndu aftur</string>
